_kubers/kuber-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-controller
  labels:
    app.kubernetes.io/name: kuber-controller
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: kuber-controller
  template:
    metadata:
      name: kuber-controller
      labels:
        app.kubernetes.io/name: kuber-controller
        app.kubernetes.io/instance: kuber-controller
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/component: controller
        app.kubernetes.io/part-of: kubers
        app.kubernetes.io/managed-by: kuber
    spec:
#      terminationGracePeriodSeconds: 30
      containers:
        - name: kuber-controller
          image: kuber/kuber-controller:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9999
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          configMap:
            name: kuber-controller
            items:
              - key: application.yml
                path: application.yml
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: kuber-controller
spec:
  selector:
    app.kubernetes.io/name: kuber-controller
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9999
  type: NodePort
