_kubers/kuber-discovery.yaml

apiVersion: v1
kind: Service
metadata:
  name: kuber-discovery
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: kuber-discovery
  ports:
    - port: 8761
      name: kuber-discovery

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kuber-discovery
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kuber-discovery
  serviceName: kuber-discovery
  replicas: 3
  template:
    metadata:
      name: kuber-discovery
      labels:
        app.kubernetes.io/name: kuber-discovery
    spec:
#      terminationGracePeriodSeconds: 30
      containers:
        - name: kuber-discovery
          image: kuber/kuber-discovery:1.0.0
          ports:
            - containerPort: 8761
              name: kuber-discovery
#          volumeMounts:
#            - mountPath: /config
#              name: config
#  volumeClaimTemplates:
#    - metadata:
#        name: config
#      spec:
#        accessModes: [ "ReadWriteOnce" ]
#        resources:
#          requests:
#            storage: 1Mi
