_kubers/kuber-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-gateway
  labels:
    app.kubernetes.io/name: kuber-gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: kuber-gateway
  template:
    metadata:
      name: kuber-gateway
      labels:
        app.kubernetes.io/name: kuber-gateway
        app.kubernetes.io/instance: kuber-gateway
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/component: gateway
        app.kubernetes.io/part-of: kubers
        app.kubernetes.io/managed-by: kuber
    spec:
      containers:
        - name: kuber-gateway
          image: kuber/kuber-gateway:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /application.yml
              name: config
              subPath: application.yml
      volumes:
        - name: config
          configMap:
            name: kuber-gateway
            items:
              - key: application.yml
                path: application.yml
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: kuber-gateway
spec:
  selector:
    app.kubernetes.io/name: kuber-gateway
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: NodePort
